fix #49 - 중개사 정보 입력 관련 오류 해결